--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <div id="sliders">
     <label>Current:</label><input id="slider1" type="range" min="0" max="1" step="0.1" value="1" oninput="osm.setOpacity(this.value)"><br/>
     <label>1911:</label><input id="slider2" type="range" min="0" max="1" step="0.1" value="1" oninput="sanborn1911.setOpacity(this.value)"><br/>
-    <label>1950:</label><input id="slider3" type="range" min="0" max="1" step="0.1" value="1" oninput="sanborn1950.setOpacity(this.value)">
+    <label>1950:</label><input id="slider3" type="range" min="0" max="1" step="0.1" value="0" oninput="sanborn1950.setOpacity(this.value)">
     <!--<label>Main:</label><input id="slider4" type="range" min="0" max="1" step="0.1" value="1" oninput="sanborn1950.setOpacity(this.value)">-->
   </div>
   <div id="map"></div>
@@ -39,6 +39,7 @@
     var osm = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png',{minZoom: 12, maxZoom: 20, attribution: '&copy; <a href="https://www.openstreetmap.org/copyright">OpenStreetMap</a> contributors'}).addTo(map);
 
     var sanborn1950 = L.tileLayer('https://timblackburn.github.io/sanborn-1950/{z}/{x}/{y}.png', {minZoom: 12, maxZoom: 20, tms: false, attribution: 'Created by QGIS'}).addTo(map);
+sanborn1950.setOpacity(0);
 
     var sanborn1911 = L.tileLayer('https://timblackburn.github.io/sanborn-1911/{z}/{x}/{y}.png', {minZoom: 12, maxZoom: 20, tms: false, attribution: 'Created by QGIS'}).addTo(map);
 
